Revert cherry picks from apache/camel main branch; cherry pick back from the camel-4.x branch (#2253)
* Revert "Cherry picks of August 9 - August 21 from apache/camel main (#2251)"

This reverts commit 8c1d2f57ea01af88dfc96fee6bb5b5b8c989db57.

* Regenerate after reverting the commits.

* CAMEL-19729: camel-jbang - camel get route-dump should handle 2+ routes in the source files

* CAMEL-19733 - update apiVersion in CRDs for Kamelet (#11066)

Camel K 2.0.0 has changed the api version from camel.apache.org/v1alpha1
to camel.apache.org/v1 for Kamelet kind

Signed-off-by: Aurélien Pupier <apupier@redhat.com>

* camel-jbang - Polished

* Fix typo `groupping` --> `grouping` (#11079)

Signed-off-by: Aurélien Pupier <apupier@redhat.com>

* CAMEL-19732 - Support Pipe in CRDs, replacing KameletBinding (#11067)

keeping KameletBinding working to let transition times for users

Signed-off-by: Aurélien Pupier <apupier@redhat.com>

* camel-jbang - Do not sort option in --help output

* camel-aws - Polish component descriptions

* [CAMEL-19736] Add 'secret' as sensitive key for logging purposes. (#11087)

* Add 'secret' as sensitive key for logging purposes.
Will mask environment variables upon usage

* Add 'secret' as sensitive key for logging purposes.
Will mask environment variables upon usage

add 'secret' to Helper file, added SensitiveUtils and sensitive-keys.json files from changes by mvn clean install -DskipTests

---------

Co-authored-by: Maarten Donderwinkel <maarten.donderwinkel@aiden.eu>

* Upgrade to Apache Pulsar 3.0.1 (#11093)

* CAMEL-19738: camel-core - Loop EIP can have wrong pending inflight in case of early loop exit due to exception

* camel-azure-files - Better description

* camel-jbang - Upgrade to quarkus 3.2.4

* Remove former camel-cxf XSD

* Remove Karaf XSDs

* Add new 4.0.0 to known releases in catalog

* Polished docs

* Update route-controller.adoc

* CAMEL-19751: disable misbehaved ca